--- a/public/assets/css/grid-cards.css
+++ b/public/assets/css/grid-cards.css
@@ -17,7 +17,7 @@
 		font-weight: 700;
 	font-size: 22px;
 	line-height: 26px;
-	color: var(--preto-cards);
+	color: var(--preto-100);
 }
 
 .grid-cards__ver-tudo {
@@ -54,14 +54,14 @@
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
-color: var(--preto-cards);
+color: var(--preto-100);
 }
 
 .card__preco {
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 19px;
-	color: var(--preto-cards);
+	color: var(--preto-100);
 }
 
 .produtos__link {
