--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,9 +1,8 @@
-.footer {
+.footer, .caixa-link-fale {
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/*gap: 32px;*/
 }
 
 .footer__logo {
@@ -12,7 +11,6 @@
 }
 .footer-links, .fale-conosco {
 	width: 100%;
-	padding: 16px;
 }
 .footer-links, .footer-links__lista{
 	text-align: center;
@@ -33,9 +31,14 @@
 	color: var(--preto-100);
 }
 /*       form     */
+.caixa-link-fale {
+	width: 100%;
+	padding: 16px;
+}
+
 .fale-conosco {
 	text-align: left;
-	margin-bottom: 16px;
+	
 }
 
 .form__fieldset {
@@ -90,4 +93,26 @@
 	font-size: 16px;
 	line-height: 19px;
 	color: var(--preto-100);
+	width: 100%;
+}
+
+
+@media screen and (min-width: 768px) {
+	.caixa-link-fale {
+		flex-direction: row;
+	}
+	.footer-links, .fale-conosco {
+		width: 50%;
+	} 
+	.footer__copyright {
+		width: 100%;
+	}
+	.footer-links, .footer-links__lista {
+		text-align: left;
+		align-items: flex-start;
+	}
+
+	.form__text {
+		height: 82px;
+	}
 }
