--- a/public/assets/css/grid-cards.css
+++ b/public/assets/css/grid-cards.css
@@ -14,7 +14,7 @@
 
 .grid-cards__title {
 	grid-area: titulo;
-		font-weight: 700;
+	font-weight: 700;
 	font-size: 22px;
 	line-height: 26px;
 	color: var(--preto-100);
@@ -24,37 +24,45 @@
 	grid-area: ver-tudo;
 }
 
-.card:nth-child(1) {
+.card:nth-of-type(1) {
 	grid-area: card1;
 }
-.card:nth-child(2) {
+.card:nth-of-type(2) {
 	grid-area: card2;
 }
-.card:nth-child(3) {
+.card:nth-of-type(3) {
 	grid-area: card3;
 }
-.card:nth-child(4) {
+.card:nth-of-type(4) {
 	grid-area: card4;
+}
+
+.card:nth-of-type(5) {
+	grid-area: card5;
+	display: none;
 }
 
 .card {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
+	padding: 5px;
+	border: solid 1px black;
+	border-radius: 5px;
+	box-shadow: 2px 2px 5px grey;
 }
 
 .card__img {
 	width: 100%;
-	height: 174px;
+	height: 50%;
 }
 
 .card__titulo {
-
 	font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-color: var(--preto-100);
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: var(--preto-100);
 }
 
 .card__preco {
@@ -66,8 +74,35 @@ color: var(--preto-100);
 
 .produtos__link {
 	font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-color: var(--azul-100);
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	color: var(--azul-100);
+}
+
+@media screen and (min-width: 768px) {
+
+	.grid-cards {
+		grid-template-areas:
+		"titulo titulo ver-tudo ver-tudo"
+		"card1 card2 card3 card4";
+		grid-template-columns: repeat(4, calc(25vw - 24px));
+	}
+
+}
+
+@media screen and (min-width: 1024px) {
+
+	.grid-cards {
+		grid-template-columns: repeat(5, calc(15vw));
+		padding-inline: 10vw;
+		grid-template-areas:
+		"titulo titulo titulo ver-tudo ver-tudo"
+		"card1 card2 card3 card4 card5";
+		
+	}
+
+	.card:nth-of-type(5) {
+		display: flex;
+	} 
 }
