finished login page and routes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,11 +4,13 @@
 @import url('banner-promo.css');
 @import url('grid-cards.css');
 @import url('footer.css');
+@import url('login.css');
 
 :root {
 	--branco: #FFF;
 	--preto-100: #464646;
 	--preto-50: #A2A2A2;
+	--preto-30: #A2A2A2;
 	--preto-5: #F5F5F5;
 	--azul-100: #2A7AE4;
 	--azul-80: #5595E9;
