--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,7 @@
 @import url('grid-cards.css');
 @import url('footer.css');
 @import url('login.css');
+@import url('allproducts.css');
 
 :root {
 	--branco: #FFF;
