refactoring form css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@
 @import url('banner-promo.css');
 @import url('grid-cards.css');
 @import url('footer.css');
-@import url('login.css');
+@import url('forms.css');
 @import url('allproducts.css');
 
 :root {
