--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -16,37 +16,73 @@
 .form__caixa {
 	position: relative;
 	width: 100%;
-	height: 56px;
+	/*height: 56px;*/
 	border-radius: 4px;
 }
 
 .form__lbl {
 	position: absolute;
 	font-weight: 400;
+	top: 8px;
 	font-size: 12px;
 	line-height: 16px;
-	color: var(--preto-50);
+	color: var(--preto-100);
 	left: 12px;
-	top: 8px;
 }
+.form__input:focus ~ .form__lbl {
+	color: var(--azul-100);
 
+}
 .form__text {
 	padding: 12px;
 }
 
 .form__input {
+	background: white;
 	font-weight: 400;
 	font-size: 16px;
 	width: 100%;
-	height: 100%;
+	height: 56px;
 	padding: 0 12px;
 	padding-top: 16px;
 	border-bottom: solid 1px var(--azul-20);
 	border-right: solid 1px var(--azul-20);
+	outline: none;
 	border-radius: 4px;	
 	color: var(--preto-100);
 }
+/*tira cor de fundo dos inputs, que o browser coloca
+automaticamente ao selecionar do auto complete*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
 
+.form__input:valid:focus {
+	border: solid 1px var(--azul-100);
+	box-shadow: 5px 5px 5px var(--azul-20);
+}
+.form__input:invalid:focus{
+	border: solid 1px red;
+	box-shadow: 2px 2px 3px #f003;
+}
+.input--error {
+	border: solid 1px red;
+	outline: none;
+}
+.span-rule {
+	color: red;
+	font-size: 14px;
+	line-height: 20px;
+	text-align: justify;
+	display: block;
+}
+
+.span-error {
+	display: block;
+}
 
 /* ########## LOGIN #######*/
 .form__section-container, .form {
